--- a/themes/brutalist-2.css
+++ b/themes/brutalist-2.css
@@ -156,3 +156,43 @@ img:hover {
     color: #2c5571;
     text-decoration: underline;
 }
+
+.fancy-quote {
+    /* max-width: 800px; */
+    margin: 2em auto;
+    padding: 2em;
+    background: #f8f8f8;
+    border-left: 4px solid #333;
+    position: relative;
+}
+
+.fancy-quote blockquote {
+    font-size: 1.4em;
+    line-height: 1.6;
+    margin: 0;
+    padding: 0 2em;
+    font-style: italic;
+}
+
+.fancy-quote blockquote::before {
+    content: '"';
+    font-size: 4em;
+    position: absolute;
+    left: 0.2em;
+    top: 0.1em;
+    color: #ccc;
+}
+
+.fancy-quote cite {
+    display: block;
+    margin-top: 1em;
+    font-size: 0.9em;
+    color: #666;
+    font-style: normal;
+}
+
+.fancy-quote .attribution {
+    text-align: right;
+    font-weight: bold;
+    margin-top: 0.5em;
+}
